--- a/app_onix/onix_client/OnixClientCenter/OnixClientCenter/UI/AccountPayable/TaxDocument/PRV1/WinAddEditTaxFormPRV1.xaml
+++ b/app_onix/onix_client/OnixClientCenter/OnixClientCenter/UI/AccountPayable/TaxDocument/PRV1/WinAddEditTaxFormPRV1.xaml
@@ -122,7 +122,7 @@
                             Width="80"  Margin="5,0,5,5" Click="CmdCheque_Click"/>
 
 
-                        <Button Name="cmdTest" Visibility="Collapsed" Content="{Binding Source={x:Static lang:CTextLabel.Instance}, Path=test}" HorizontalAlignment="Center"
+                        <Button Name="cmdTest" Visibility="Visible" Content="{Binding Source={x:Static lang:CTextLabel.Instance}, Path=test}" HorizontalAlignment="Center"
                             Width="80"  Margin="5,0,5,5" Click="CmdTest_Click"/>
                     </StackPanel>
 
