--- a/app_onix/onix_client/OnixClientCenter/OnixClientCenter/UI/AccountPayable/TaxDocument/PRV1Kor/WinAddEditTaxFormPRV1Kor.xaml
+++ b/app_onix/onix_client/OnixClientCenter/OnixClientCenter/UI/AccountPayable/TaxDocument/PRV1Kor/WinAddEditTaxFormPRV1Kor.xaml
@@ -1,4 +1,4 @@
-﻿<src:WinBase x:Class="Onix.ClientCenter.UI.AccountPayable.TaxDocument.PRV1.WinAddEditTaxFormPRV1"
+﻿<src:WinBase x:Class="Onix.ClientCenter.UI.AccountPayable.TaxDocument.PRV1Kor.WinAddEditTaxFormPRV1Kor"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -51,10 +51,10 @@
                      VerticalContentAlignment="Center" HorizontalAlignment="Left" HorizontalContentAlignment="Left" 
                      Margin="5,0,0,0" TextChanged="DefaultTextBox_TextChanged" PreviewTextInput="DefaultTextBoxNumber_PreviewTextInput"/>
 
-            <Label Grid.Column="1" Grid.Row="2" Content="เดือน" Name="lblMonth"
-                       VerticalAlignment="Center" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" Margin="5,0,0,0"/>
+            <!--<Label Grid.Column="1" Grid.Row="2" Content="เดือน" Name="lblMonth"
+                       VerticalAlignment="Center" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" Margin="5,0,0,0"/>-->
 
-            <StackPanel Grid.Column="2" Grid.Row="2" Orientation="Horizontal">
+            <!--<StackPanel Grid.Column="2" Grid.Row="2" Orientation="Horizontal">
                 <ComboBox Name="cboMonth" DisplayMemberPath="Description" SelectedValuePath="ObjSelf" 
                               SelectionChanged="DefaultComboBox_SelectionChanged" SelectedItem="{Binding TaxMonthObj}" SelectedValue="{Binding TaxMonthObj}" 
                               ItemsSource="{Binding Source={x:Static lang:CMasterReference.Instance}, Path=Months}"
@@ -63,7 +63,7 @@
                 <CheckBox Name="cmdTaxFlag" IsThreeState="False" Content="{Binding Source={x:Static lang:CTextLabel.Instance}, Path=tax_deductable}" 
                               IsChecked="{Binding Path=IsTaxDeductable}" VerticalAlignment="Center"
                               HorizontalAlignment="Left" Margin="20,0,0,0" Checked="DefaultCheckbox_Checked" Unchecked="DefaultCheckbox_Checked"/>
-            </StackPanel>
+            </StackPanel>-->
         </Grid>
 
         <Grid DockPanel.Dock="Bottom">
@@ -122,7 +122,7 @@
                             Width="80"  Margin="5,0,5,5" Click="CmdCheque_Click"/>
 
 
-                        <Button Name="cmdTest" Visibility="Collapsed" Content="{Binding Source={x:Static lang:CTextLabel.Instance}, Path=test}" HorizontalAlignment="Center"
+                        <Button Name="cmdTest" Visibility="Visible" Content="{Binding Source={x:Static lang:CTextLabel.Instance}, Path=test}" HorizontalAlignment="Center"
                             Width="80"  Margin="5,0,5,5" Click="CmdTest_Click"/>
                     </StackPanel>
 
